MySQL_Codingtest_Practice_lv1_2_q34 updated

--- a/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNZOADdZMzuxt+gg3VsQPP"
+      "authorship_tag": "ABX9TyP7Z0h9NjWEudGhIEk9oDoP"
     },
     "kernelspec": {
       "name": "python3",
@@ -288,6 +288,109 @@
       ],
       "metadata": {
         "id": "3ZIIZraqLykX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **34. 성분으로 구분한 아이스크림 총 주문량(250305)(GROUP BY)**"
+      ],
+      "metadata": {
+        "id": "I3P-UAyhFk8v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# 다음은 아이스크림 가게의 상반기 주문 정보를 담은 FIRST_HALF 테이블과 아이스크림 성분에 대한 정보를 담은 ICECREAM_INFO 테이블입니다.\n",
+        "# FIRST_HALF 테이블 구조는 다음과 같으며, SHIPMENT_ID, FLAVOR, TOTAL_ORDER 는\n",
+        "# 각각 아이스크림 공장에서 아이스크림 가게까지의 출하 번호, 아이스크림 맛, 상반기 아이스크림 총주문량을 나타냅니다.\n",
+        "# FIRST_HALF 테이블의 기본 키는 FLAVOR입니다.\n",
+        "\n",
+        "# NAME\tTYPE\tNULLABLE\n",
+        "# SHIPMENT_ID\tINT(N)\tFALSE\n",
+        "# FLAVOR\tVARCHAR(N)\tFALSE\n",
+        "# TOTAL_ORDER\tINT(N)\tFALSE\n",
+        "# ICECREAM_INFO 테이블 구조는 다음과 같으며, FLAVOR, INGREDITENT_TYPE 은 각각 아이스크림 맛, 아이스크림의 성분 타입을 나타냅니다.\n",
+        "# INGREDIENT_TYPE에는 아이스크림의 주 성분이 설탕이면 sugar_based라고 입력되고, 아이스크림의 주 성분이 과일이면 fruit_based라고 입력됩니다.\n",
+        "# ICECREAM_INFO의 기본 키는 FLAVOR입니다. ICECREAM_INFO테이블의 FLAVOR는 FIRST_HALF 테이블의 FLAVOR의 외래 키입니다.\n",
+        "\n",
+        "# NAME\tTYPE\tNULLABLE\n",
+        "# FLAVOR\tVARCHAR(N)\tFALSE\n",
+        "# INGREDIENT_TYPE\tVARCHAR(N)\tFALSE\n",
+        "\n",
+        "# 문제\n",
+        "# 상반기 동안 각 아이스크림 성분 타입과 성분 타입에 대한 아이스크림의 총주문량을 총주문량이 작은 순서대로 조회하는 SQL 문을 작성해주세요.\n",
+        "# 이때 총주문량을 나타내는 컬럼명은 TOTAL_ORDER로 지정해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 FIRST_HALF 테이블이 다음과 같고\n",
+        "\n",
+        "# SHIPMENT_ID\tFLAVOR\tTOTAL_ORDER\n",
+        "# 101\tchocolate\t3200\n",
+        "# 102\tvanilla\t2800\n",
+        "# 103\tmint_chocolate\t1700\n",
+        "# 104\tcaramel\t2600\n",
+        "# 105\twhite_chocolate\t3100\n",
+        "# 106\tpeach\t2450\n",
+        "# 107\twatermelon\t2150\n",
+        "# 108\tmango\t2900\n",
+        "# 109\tstrawberry\t3100\n",
+        "# 110\tmelon\t3150\n",
+        "# 111\torange\t2900\n",
+        "# 112\tpineapple\t2900\n",
+        "# ICECREAM_INFO 테이블이 다음과 같다면\n",
+        "\n",
+        "# FLAVOR\tINGREDIENT_TYPE\n",
+        "# chocolate\tsugar_based\n",
+        "# vanilla\tsugar_based\n",
+        "# mint_chocolate\tsugar_based\n",
+        "# caramel\tsugar_based\n",
+        "# white_chocolate\tsugar_based\n",
+        "# peach\tfruit_based\n",
+        "# watermelon\tfruit_based\n",
+        "# mango\tfruit_based\n",
+        "# strawberry\tfruit_based\n",
+        "# melon\tfruit_based\n",
+        "# orange\tfruit_based\n",
+        "# pineapple\tfruit_based\n",
+        "# 상반기에 아이스크림의 주 성분이 설탕인 아이스크림들에 대한 총주문량을 구하면 3,200 + 2,800 + 1,700 + 2,600 + 3,100 = 13,400입니다.\n",
+        "# 아이스크림의 주 성분이 과일인 아이스크림들에 대한 총주문량을 구하면 3,100 + 2,450 + 2,150 + 2,900 + 3,150 + 2,900 + 2,900 = 19,550입니다.\n",
+        "# 따라서 총주문량이 작은 순서대로 조회하는 SQL 문을 실행하면 다음과 같이 나와야 합니다.\n",
+        "\n",
+        "# INGREDIENT_TYPE\tTOTAL_ORDER\n",
+        "# sugar_based\t13400\n",
+        "# fruit_based\t19550"
+      ],
+      "metadata": {
+        "id": "R_khB52OFvCY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내 코드"
+      ],
+      "metadata": {
+        "id": "Gfv52O3BF7P6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT i.INGREDIENT_TYPE, SUM(f.TOTAL_ORDER) AS TOTAL_ORDER\n",
+        "# FROM FIRST_HALF f\n",
+        "# JOIN ICECREAM_INFO i on f.FLAVOR = i.FLAVOR\n",
+        "# GROUP BY i.INGREDIENT_TYPE\n",
+        "# ORDER BY f.TOTAL_ORDER ASC"
+      ],
+      "metadata": {
+        "id": "954ozXVLFqfz"
       },
       "execution_count": null,
       "outputs": []
