MySQL_Codingtest_Practice_lv1_2_q35 updated

--- a/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7Z0h9NjWEudGhIEk9oDoP"
+      "authorship_tag": "ABX9TyM0m/zcekpOPteFkWd72B1j"
     },
     "kernelspec": {
       "name": "python3",
@@ -391,6 +391,85 @@
       ],
       "metadata": {
         "id": "954ozXVLFqfz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **35. 조건에 맞는 도서 리스트 출력하기(250306)(SELECT)**"
+      ],
+      "metadata": {
+        "id": "8UFmjl9Hwpm9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# 다음은 어느 한 서점에서 판매중인 도서들의 도서 정보(BOOK) 테이블입니다.\n",
+        "\n",
+        "# BOOK 테이블은 각 도서의 정보를 담은 테이블로 아래와 같은 구조로 되어있습니다.\n",
+        "\n",
+        "# Column name\tType\tNullable\tDescription\n",
+        "# BOOK_ID\tINTEGER\tFALSE\t도서 ID\n",
+        "# CATEGORY\tVARCHAR(N)\tFALSE\t카테고리 (경제, 인문, 소설, 생활, 기술)\n",
+        "# AUTHOR_ID\tINTEGER\tFALSE\t저자 ID\n",
+        "# PRICE\tINTEGER\tFALSE\t판매가 (원)\n",
+        "# PUBLISHED_DATE\tDATE\tFALSE\t출판일\n",
+        "# 문제\n",
+        "# BOOK 테이블에서 2021년에 출판된 '인문' 카테고리에 속하는 도서 리스트를 찾아서 도서 ID(BOOK_ID), 출판일 (PUBLISHED_DATE)을 출력하는 SQL문을 작성해주세요.\n",
+        "# 결과는 출판일을 기준으로 오름차순 정렬해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 BOOK 테이블이 다음과 같다면\n",
+        "\n",
+        "# BOOK_ID\tCATEGORY\tAUTHOR_ID\tPRICE\tPUBLISHED_DATE\n",
+        "# 1\t인문\t1\t10000\t2020-01-01\n",
+        "# 2\t경제\t2\t9000\t2021-02-05\n",
+        "# 3\t인문\t2\t11000\t2021-04-11\n",
+        "# 4\t인문\t3\t10000\t2021-03-15\n",
+        "# 5\t생활\t1\t12000\t2021-01-10\n",
+        "# 조건에 속하는 도서는 도서 ID 가 3, 4인 도서이므로 다음과 같습니다.\n",
+        "\n",
+        "# BOOK_ID\tPUBLISHED_DATE\n",
+        "# 3\t2021-04-11\n",
+        "# 4\t2021-03-15\n",
+        "# 그리고 출판일 오름차순으로 정렬하여야 하므로 다음과 같은 결과가 나와야 합니다.\n",
+        "\n",
+        "# BOOK_ID\tPUBLISHED_DATE\n",
+        "# 4\t2021-03-15\n",
+        "# 3\t2021-04-11\n",
+        "# 주의사항\n",
+        "# PUBLISHED_DATE의 데이트 포맷이 예시와 동일해야 정답처리 됩니다."
+      ],
+      "metadata": {
+        "id": "D7EjStDswu9p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 나의 코드"
+      ],
+      "metadata": {
+        "id": "8l6XOW_Jxf3a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT BOOK_ID, DATE_FORMAT(PUBLISHED_DATE, '%Y-%m-%d') AS PUBLISHED_DATE\n",
+        "# FROM BOOK\n",
+        "# WHERE PUBLISHED_DATE LIKE '2021%'\n",
+        "# AND CATEGORY = '인문'\n",
+        "# ORDER BY PUBLISHED_DATE"
+      ],
+      "metadata": {
+        "id": "aFSV4ct1xhUn"
       },
       "execution_count": null,
       "outputs": []
